--- a/style.css
+++ b/style.css
@@ -15,17 +15,40 @@
 .keyboard div{
     display: flex;
 }
+
+.container-forca{
+    display: flex;
+    align-items: end;
+    margin: 2%;
+    position: relative;
+}
 .forca{
     height: 50vh;
-    flex-basis: 50%;
+    flex-basis: 40%;
+    display: flex;
+    align-items:center;
+    justify-content: end;
+    
+}
+.forca img{
+    height: 80%;
+    display: none;
+}
+.forca img:first-child{
+    display: block;
 }
 .palavra{
     height: 10vh;
     flex-basis: 50%;
     display: flex;
-    justify-content: center;
+    margin-left: 10%;
+    justify-content: start;
     margin-bottom: 2%;
     font-size: 30px;
+}
+
+.word span{
+    margin: 0 3px 0 3px;
 }
 .letter{
     display: flex;
@@ -63,6 +86,13 @@
         height: 20px;
         width: 20px;
         margin: 3px;
+    }
+    .container-forca{
+        flex-direction: column;
+        align-items: center;
+    }
+    .forca{
+        padding: 5% 0 5% 0;
     }
 }
 @media (max-width:600px){
