--- a/style.css
+++ b/style.css
@@ -75,6 +75,51 @@
     background-color: rgb(185, 52, 52);
 }
 
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 999; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+  }
+
+  .modal-content {
+    background-color: #fefefe;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%; 
+    height: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+}
+.modal-content p{
+    font-size: 18px;
+}
+
+.btn {
+    margin-top: 20px;
+    color: #3a3939;
+    float: right;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 5px 10% 5px 10%;
+  }
+  
+  .btn:hover,
+  .btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
 @media (max-width:850px){
     .letter{
         height: 30px;
@@ -103,5 +148,8 @@
         height: 10px;
         width: 10px;
         font-size: 15px;
+    }
+    .modal-content{
+        width: 80%;
     }
 }
