--- a/style.css
+++ b/style.css
@@ -41,12 +41,18 @@
     height: 10vh;
     flex-basis: 50%;
     display: flex;
+    flex-direction: column;
     margin-left: 10%;
     justify-content: start;
     margin-bottom: 2%;
     font-size: 30px;
+
 }
 
+.tip{
+    font-size: 15px;
+    align-self: flex-start;
+}
 .word span{
     margin: 0 3px 0 3px;
 }
@@ -138,6 +144,9 @@
     }
     .forca{
         padding: 5% 0 5% 0;
+    }
+    .tip{
+        align-self: center;
     }
 }
 @media (max-width:600px){
